# CnEquitySnapshotPipelines

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  qsl.toml
.github/workflows/: ci.yml  publish-market-history.yml
data/index_membership/: cn_000300_membership_timeline.csv  cn_000852_membership_timeline.csv  cn_000905_membership_timeline.csv
docs/: artifact_contract.md
examples/chinext_growth_momentum_quality/: factor_snapshot.sample.csv
examples/dividend_quality/: factor_snapshot.sample.csv
scripts/: build_chinext_growth_momentum_quality_sample.py  build_dividend_quality_sample.py
src/cn_equity_snapshot_pipelines/: __init__.py  akshare_enrichment.py  akshare_market_history.py  akshare_metadata.py  akshare_staging.py  artifacts.py  chinext_growth_momentum_quality.py  contracts.py  dividend_quality.py  index_membership.py
src/strategy_lifecycle/: __init__.py  backtest_wrapper.py  return_matrix_adapter.py
tests/: test_akshare_enrichment.py  test_akshare_metadata.py  test_akshare_staging.py  test_chinext_growth_momentum_quality.py  test_contracts.py  test_dividend_quality.py  test_index_membership.py  test_publish_market_history_workflow.py  test_qsl_metadata.py
