[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-equity-snapshot-pipelines"
version = "0.1.0"
description = "Feature-snapshot pipelines and scaffold helpers for A-share equity strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "cn-equity-strategies @ git+https://github.com/QuantStrategyLab/CnEquityStrategies.git@73844e92a8570a61e5a9dc6c245809d0b27b89bc",
]

[project.optional-dependencies]
test = ["pytest>=8"]
public-data = ["akshare>=1.14", "requests>=2.31"]

[project.scripts]
cneq-build-dividend-quality-snapshot = "cn_equity_snapshot_pipelines.dividend_quality:main"
cneq-build-chinext-growth-momentum-quality-snapshot = "cn_equity_snapshot_pipelines.chinext_growth_momentum_quality:main"
cneq-stage-akshare-dividend-quality = "cn_equity_snapshot_pipelines.akshare_staging:main"
cneq-stage-akshare-market-history = "cn_equity_snapshot_pipelines.akshare_market_history:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
